--- a/setup/MSc.bib
+++ b/setup/MSc.bib
@@ -4,17 +4,12 @@
 % Your bibliography should be stored here
 % ****************************************
 
-@BOOK{Led2004,
-    AUTHOR       = "S. Deorowicz and A. Sk\'orczy\'nski",
-    TITLE        = "LEd documentation",
-    PUBLISHER    = "",
-    YEAR         = "2004",
-    VOLUME       = "",
-    SERIES       = "",
-    ADDRESS      = "",
-    EDITION      = "",
-    MONTH        = "",
-    NOTE         = ""
+@BOOK {
+    GolubVanLoan96,
+    author="Golub, Gene H. and Van Loan, Charles F.",
+    title="Matrix Computations",
+    publisher="Johns Hopkins",
+    year="1996",
+    edition="third"    
 }
-
 % ********** End of bibliography **********
