--- a/setup/style.tex
+++ b/setup/style.tex
@@ -24,6 +24,8 @@
 %\usepackage{fontspec}
 %\setmonofont[Scale=0.8]{Consolas}
 \usepackage{inconsolata}
+\usepackage[chapter]{algorithm}
+\usepackage{algorithmic}
 
 % *************** Enable index generation ***************
 \makeindex
@@ -178,12 +180,12 @@
 \makeoddhead{headings}{\small\slshape\rightmark}{}{\thepage}
 
 % *************** Table of contents style ***************
-\settocdepth{subsection}
+\settocdepth{subsubsection}
 
-\setsecnumdepth{subsection}
-\maxsecnumdepth{subsection}
-\settocdepth{subsection}
-\maxtocdepth{subsection}
+\setsecnumdepth{subsubsection}
+\maxsecnumdepth{subsubsection}
+\settocdepth{subsubsection}
+\maxtocdepth{subsubsection}
 
 % ********** Commands for epigraphs **********
 \setlength{\epigraphwidth}{0.57\textwidth}
