Started matrix chapter

--- a/lucrare_main.tex
+++ b/lucrare_main.tex
@@ -16,6 +16,7 @@
 \include{capitolul1/sisteme_grafice}
 \include{capitolul1/sisteme_de_coordonate}
 \include{capitolul1/vectori}
+\include{capitolul1/matrici}
 
 % *************** Bibliography ***************
 \bibliographystyle{plain}
