--- a/setup/MSc.bib
+++ b/setup/MSc.bib
@@ -12,4 +12,20 @@
     year="1996",
     edition="third"    
 }
+
+@BOOK {
+    NitaNS96,
+    author="C. Năstăsescu, I. Stănescu, C. Niță",
+    title="Elemente de algebră superioară",
+    publisher="Editura didactică și pedagogică",
+    year="1996"
+}
+
+@BOOK {
+    Rosculet87,
+    author="Marcel Roșculeț",
+    title="Algebră liniară, geometrie analitică și geometrie diferențială",
+    publisher="Editura tehnică",
+    year="1987"
+}
 % ********** End of bibliography **********
