--- a/setup/style.tex
+++ b/setup/style.tex
@@ -12,6 +12,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{amsxtra}
 \usepackage{booktabs}
 \usepackage{stmaryrd}
 \usepackage{url}
