- added quaternion subsection - added linear transforms subsection

--- a/lucrare_main.tex
+++ b/lucrare_main.tex
@@ -17,6 +17,8 @@
 \include{capitolul1/sisteme_de_coordonate}
 \include{capitolul1/vectori}
 \include{capitolul1/matrici}
+\include{capitolul1/quaternion}
+\include{capitolul1/transformari_liniare}
 
 % *************** Bibliography ***************
 \bibliographystyle{plain}
