--- a/setup/MSc.bib
+++ b/setup/MSc.bib
@@ -28,4 +28,13 @@
     publisher="Editura tehnică",
     year="1987"
 }
+
+@BOOK {
+    Vince06,
+    author="Vince, John",
+    title="Mathematics for computer graphics",
+    publisher="Springer Verlag",
+    year="2006",
+    edition="second"
+}
 % ********** End of bibliography **********
