- minor changes/bugfixes

--- a/capitolul1/matrici.tex
+++ b/capitolul1/matrici.tex
@@ -47,7 +47,7 @@ Proprietățile adunării matricilor.
   \item Adunarea matricilor admite element neutru, matricea \textbf{O}
   (matricea nulă), cu m linii și n coloane, adică $\mathbf{A + O = O + A = A}$.
   \item Orice matrice are un opus, adică $\forall A = \Vert a_{ij} \Vert \quad
-   \exists \quad (-A) = \Vert (-a_{ij}) \Vert \quad \text{a.î} \quad 
+   \exists \quad (-A) = \Vert (-a_{ij}) \Vert \text{ a.î. }
    A + (-A) = (-A) + A = O$.
 \end{enumerate}
 Aceste proprietăți arată că mulțimea matricilor de $m \times n$ linii și
@@ -191,8 +191,8 @@ proprietăți ale acestora :
   \item Dacă toate elementele unei linii (sau coloane) ale unei matrici sunt
   înmulțite cu un număr $\alpha$, obținem o matrice al cărei determinant este
   egal cu $\alpha$ înmulțit cu determinantul matricei inițiale.
-  \item Dacă într-o matrice elementele a două linii sau două coloane sunt
-  proporționale, atunci determinantul matricii este nul.
+  \item Dacă într-o matrice elementele a două linii sau 
+  două coloane sunt proporționale, atunci determinantul matricii este nul.
   \item Dacă o linie sau o coloană este o combinație liniară de celelalte linii
   sau coloane, atunci determinantul matricii este nul.
   \item Dacă la o linie sau coloana a unei matrice adunăm elementele altei linii
