--- a/capitolul1/vectori.tex
+++ b/capitolul1/vectori.tex
@@ -182,8 +182,8 @@ avea un produs scalar pozitiv cu el și viceversa.
 
 \newtheorem{dotproduct_properties}[vector_arith]{Teorema}
 \begin{dotproduct_properties}
-Dînduse un scalar \textbf{a} și trei vectori \textbf{P, Q, R}, următoarele
-proprietăți sunt adevărate.
+Fie un scalar \textbf{a} și trei vectori \textbf{P, Q, R}. Atunci, următoarele
+proprietăți sunt adevărate :
 \begin{enumerate}
   \item $\mathbf{P \cdot Q} = \mathbf{Q \cdot P}$ (comutativitatea produsului
   scalar)
@@ -244,13 +244,6 @@ $\mathbf{P \times Q}$ verifică ecuația
 \end{equation} unde $\alpha$ reprezintă unghiul dintre vectorii \textbf{P, Q}.
 \end{crossproduct_trig}
 \todo {figura de inserat aici}
-
-Ca și o consecință, aria unui triunghi arbitrar ale cărui vertice sunt
-date de punctele $\mathbf{V_0, V_1, V_2}$ poate fi calculată după formula
-\begin{equation}
-\label{eq:vec:cross_tri_area}
-A = \frac{1}{2} \Vert (V_1 - V_0) \times (V_2 - V_0) \Vert
-\end{equation}
 
 \newtheorem{crossproduct_properties}[vector_arith]{Teorema}
 \begin{crossproduct_properties}
