--- a/setup/front.tex
+++ b/setup/front.tex
@@ -26,7 +26,7 @@
 \vfill
 \begin{center}
     \Huge\bfseries
-    Unelte matematice pentru aplicații grafice.
+    Unelte matematice pentru aplicații grafice 2D și 3D.
 \end{center}
 
 \vfill
@@ -56,9 +56,9 @@
 \cleardoublepage
 
 % *************** Dedication ***************
-\vspace*{\fill}
-{\hfill\sffamily\itshape To ...}
-\cleardoublepage
+%\vspace*{\fill}
+%{\hfill\sffamily\itshape To ...}
+%\cleardoublepage
 
 \rmfamily
 \normalfont
